[FIX] mail: html composer styling issues
This commit fixes several HTML composer styling issues:

  - The HTML composer html did not align vertically with the text area
    when the chat window is in small UI mode.

  - The mention/redirect links had a border and causing slight layout
    shifts when applied to the composer. This is now fixed by using outline
    instead of border.

  - The maximum height of the HTML composer was not constrained on small
    screens, causing it to overflow the screen. This is now fixed by using
    a max-height relative to the viewport height.

task-5022254

--- a/addons/mail/static/src/core/common/composer.scss
+++ b/addons/mail/static/src/core/common/composer.scss
@@ -100,7 +100,7 @@
     background-color: var(--mail-Composer-bg, $o-view-background-color);
 }
 
-.o-mail-Composer-inputStyle {
+.o-mail-Composer-inputStyle, .o-mail-Composer-html {
     padding-top: 10px; // carefully crafted to have the text in the middle in chat window
     padding-bottom: 10px;
     padding-left: map-get($spacers, 1);
@@ -126,42 +126,12 @@
     }
 
     .o-mail-Composer.o-isUiSmall & {
-        padding-bottom: 10px;
-    }
-}
-
-.o-mail-Composer-html {
-    padding-top: 10px; // carefully crafted to have the text in the middle in chat window
-    padding-bottom: 10px;
-    padding-left: map-get($spacers, 1);
-    padding-right: map-get($spacers, 1);
-
-    line-height: 1.42857143 !important; // so that input is rounded to 20px = 14px (base font) * 1.42857143 (line-height)
-
-    .o-mail-Composer.o-editing & {
-        padding-left: map-get($spacers, 2);
-        padding-right: map-get($spacers, 2);
-    }
-
-    .o-mail-Composer.o-extended & {
-        padding-left: map-get($spacers, 2) + map-get($spacers, 1);
-        padding-right: map-get($spacers, 2);
-    }
-
-    .o-mail-Composer.o-chatWindow & {
         padding-top: 7px;
         padding-bottom: 7px;
-        padding-left: map-get($spacers, 1) / 2;
-        padding-right: map-get($spacers, 1) / 2;
-    }
-
-    .o-mail-Composer.o-isUiSmall & {
-        padding-top: 10px;
-        padding-bottom: 10px;
     }
 }
 
-.o-mail-Composer-input {
+.o-mail-Composer-input, .o-mail-Composer-html {
     max-height: Min(400px, 60vh);
     resize: none;
 
